# minimodal-rs

./: .gitignore  Cargo.toml  README  README.md  build.rs  test_minimodal.bash
basemodules/: Cargo.toml
basemodules/src/: function.rs  lib.rs
macros/: Cargo.toml
macros/src/: args.rs  core_function_impl.rs  dummy_macro.rs  function.rs  function_experiment.rs  function_trait.rs  lib.rs  macro_builder.rs  map_trait.rs  mount_macro.rs  remote_function.rs  stream_trait.rs  utils.rs
minimodal_proto/: Cargo.toml  build.rs
minimodal_proto/src/: proto.rs
proto/: minimodal.proto
remote_execute_macro/: Cargo.toml
remote_execute_macro/src/: lib.rs  log_duration.rs  remote_function.rs
src/: lib.rs  main.rs  mount.rs  parse_file.rs  utilities.rs  utils.rs
src/server/: main.rs  server.rs
tests/: function_macro.rs  grpc_server.rs  lib.rs  main.rs  remote_fn.rs  test_macro_remove.rs  test_utils.rs  utils.rs  utils_test.rs
