[package]
name = "minimodal-rs"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "minimodal-server"
path = "src/server/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "minimodal-app"
path = "src/app.rs"

[dependencies]
prost = "0.13.1"
remote_execute_macro = { path = "./remote_execute_macro" }
serde = "1.0.205"
serde_closure = "0.3.3"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"

[build-dependencies]
tonic-build = "0.9"
