[package]
name = "minimodal_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "minimodal_rs"
path = "src/lib.rs"


[[bin]] # Bin to run the HelloWorld gRPC server
name = "minimodal-server"
path = "src/server/main.rs"

[dependencies]
basemodules = { path = "./basemodules" }
minimodal_proto = { path = "./minimodal_proto" }
macros = { path = "./macros" }
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
prost = "0.13.1"
serde = "1.0.205"
serde_closure = "0.3.3"
tokio = { version = "1.39.2", features = ["full"] }
serde_json = "1.0.122"
tonic = "0.12.1"
tonic-build = "0.9"
base64 = "0.22.1"
cargo_toml = "0.20.4"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full", "visit-mut"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
cargo_metadata = "0.18.1"
ignore = "0.4.22"
walkdir = "2.5.0"
toml = "0.8.19"
prettyplease = "0.2.20"
derive_builder = "0.20.0"
once_cell = "1.19.0"
erased-serde = "0.4.5"
async-trait = "0.1.81"
polars = { version = "0.42.0", features = ["serde"] }
rstest = "0.22.0"

[build-dependencies]
tonic-build = "0.9"
