[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
basemodules = { path = "../basemodules" }
minimodal_proto = { path = "../minimodal_proto" }
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full", "extra-traits"] }
tonic = "0.12.1"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic-build = "0.9"
base64 = "0.22.1"
anyhow = "1.0.76"
once_cell = "1.19.0"
cargo_toml = "0.20.4"


