[package]
name = "minimodal_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
prost = "0.13.1"
serde = "1.0.205"
serde_closure = "0.3.3"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"
tonic-build = "0.9"
futures-core = "0.3.30"

[build-dependencies]
tonic-build = "0.9"
futures-core = "0.3.30"